<resources>
    <string name="app_name">Stratafy</string>

    <string name="hello_blank_fragment">This is the main fragment</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="address">Bankstown, 2200 NSW \n Sydney, Australia</string>
    <string name="link">www.bankstowngardens.com.au</string>
    <string name="quickLink"><u>Quick Links:</u></string>
    <string name="logandissue"><u>LOG AND ISSUE</u></string>
    <string name="logs"><u>Maintenance / Log Issues</u></string>
    <string name="getInTouch"><u>GET IN TOUCH WITH STRATA MANAGER</u></string>
    <string name="byLaws"><u>VIEW BUILDING BY-LAWS</u></string>
    <string name="noconnection">No internet connection</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="residence">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="retail">Retail</string>
    <string name="signups">Sign Up</string>
    <string name="propertyId">Enter Property ID</string>
    <string name="ptype">Select Profile Type</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="approval">Request Approval</string>
    <string name="term"><![CDATA[TERM & CONDITIONS]]></string>
    <string name="forgot">FORGOT PASSWORD?</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="empty">Username or Password is empty</string>
    <string name="ok_button_label">OK</string>
    <string name="title">Enter Title</string>
    <string name="enterDetail">Enter the details here</string>
    <string name="selectCat">Select Category</string>
    <string name="notes">Notes</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="inbox">INBOX</string>
    <string name="strata">STRATA</string>
    <string name="text1">A place where you can talk directly to your strata manager in real time.</string>
    <string name="text2">Log building issue here as well as any issues you need to bring to the attention of management</string>
    <string name="title1">Booking Services \n&amp; Amenities</string>
    <string name="current">CURRENT BY-LAWS</string>
    <string name="future">VOTE ON THE FUTURE</string>
    <string name="summary"><u>SUMMARY</u></string>
    <string name="text3">STRATA SCHEMES MANAGEMENT REGULATION 2016 - SCHEDULE 3 - Model by-laws for residential strata schemes (clause 37)\nNote: These by-laws do not apply to strata schemes unless they are adopted by the owners corporation for the strata schemes or lodged with the strata plan</string>
    <string name="strataDoc">Strata Documents</string>
    <string name="mylogs">MYLOGS</string>
    <string name="plogs">PUBLICLOGS</string>
    <string name="archived">ARCHIVED</string>
    <string name="privats">Private</string>
    <string name="selectDate">Event Date</string>
    <string name="Etime">Event End Time</string>
    <string name="Stime">Event Start Time</string>
    <string name="signins">Sign In</string>
    <string name="verify_you">We need to verify you \nto ensure property privacy</string>
    <string name="takes_times">Only takes a couple seconds... kind of...</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="phone">Cell / Mobile Number</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="addres">Address</string>
    <string name="aptno">Apartment Number</string>
    <string name="peoples">Number of people in household</string>
    <string name="bedrooms">Number of bedrooms</string>
    <string name="bathrooms">Number of bathrooms</string>
    <string name="cars">Number of Car Spaces</string>
    <string name="carno">Primary Car Registration Number</string>
    <string name="pname">Key Property Contact name if not you</string>
    <string name="pno">Key Property Contact number if you not</string>
    <string name="ename">Emergency Contact Name</string>
    <string name="eno">Emergency Contact Number</string>
    <string name="agentname">Landlord / Agent Name</string>
    <string name="agentno">Landlord / Agent Number</string>
    <string name="jobposition">Position</string>
    <string name="companyname">Company Name</string>
    <string name="empNo">Employee Number</string>
    <string name="emptype">Employment Type</string>
    <string name="carReg">Car Registration</string>
    <string name="keyname">Key Contact Name / Number</string>
    <string name="industry">Industry</string>
    <string name="floor">Floor</string>
    <string name="shopname">Shop Name</string>
    <string name="shoplocation">Shop Location #</string>
    <string name="shopnumber">Shop Phone Number</string>
    <string name="listview">LIST VIEW</string>
    <string name="mapview">MAP VIEW</string>

    <string name="alert_gps_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="alert_gps_title">GPS Settings</string>
    <string name="alert_gps_yes">Settings</string>
    <string name="alert_gps_no">Cancel</string>
    <string name="profile">Your Profile</string>

</resources>
