<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pixeldart.activities.SignupActivity">

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/signup_background">

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/signups"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/background"
        android:layout_marginTop="-80dp"
        android:orientation="horizontal">

    </LinearLayout>

    <ScrollView
        android:overScrollMode="never"
        android:layout_below="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtPID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/propertyId"
                android:textColor="@color/greyLight" />

            <EditText
                android:id="@+id/edtPID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/txtPType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/ptype"
                android:textColor="@color/greyLight" />

            <EditText
                android:id="@+id/edtPType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                android:textColor="@color/greyLight" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textColor="@color/greyLight" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textColor="@color/greyLight" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/MyEditTextTheme" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/btnApprove"
                android:text="@string/approval"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <TextView
                    android:text="@string/term"
                    android:textColor="@color/greyLight"
                    android:id="@+id/txtTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtSignin"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:text="@string/signin"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
