<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.stratafy.activities.SigninActivity">


    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/signin_background">

        <ImageView
            android:tint="@color/white"
            android:layout_margin="10dp"
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/mProgressbar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp"
            android:text="@string/signins"
            android:textColor="@color/white"
            android:textSize="30sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/background"
        android:layout_marginTop="-80dp"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/background_round_image"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/ic_check"
                android:layout_width="36dp"
                android:layout_height="36dp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llMiddle"
        android:layout_below="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/username"
            android:textColor="@color/greyLight" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/MyEditTextTheme" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/greyLight" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/MyEditTextTheme" />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button

                android:id="@+id/btnSignin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorAccent"
                android:text="@string/signin"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtforgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot"
                    android:textColor="@color/greyLight" />

                <TextView
                    android:id="@+id/txtSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:text="@string/signup"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
